# CandyNapper

./: CMakeLists.txt
CandyGraphics/: CMakeLists.txt  doxyfile  make.sh
CandyGraphics/Resources/: Phong.frag  cel.frag  cel.vert  cell-shading.frag  cilindro.3ds  cono.3ds  cubo.3ds  esfera.3ds  mono.3ds  osito.3ds  toroide.3ds
CandyGraphics/include/: AnimatedTransformation.h  Box.h  Camera.h  CandyGraphics.h  Color.h  Console.h  Director.h  GNode.h  GTree.h  GestorRecursos.h  Light.h  Line.h  MatrixStack.h  Model.h  ModelAnimation.h  OpenGL.h  ParserGestorRecursos.h  Particles.h  Plane.h  Raton.h  Scene.h  Shape.h  Teclado.h  Text.h  Timer.h  Transformation.h  Ventana.h  guiButton.h  guiGBox.h  guiRButton.h  guiSlide.h  load3ds.h
CandyGraphics/lib/: AnimatedTransformation.cpp  Box.cpp  CMakeLists.txt  Camera.cpp  CandyGraphics.cpp  Color.cpp  Console.cpp  Director.cpp  GNode.cpp  GTree.cpp  GestorRecursos.cpp  Light.cpp  Line.cpp  MatrixStack.cpp  Model.cpp  ModelAnimation.cpp  ParserGestorRecursos.cpp  Particles.cpp  Plane.cpp  Raton.cpp  Scene.cpp  Shape.cpp  Teclado.cpp  Text.cpp  Timer.cpp  Transformation.cpp  Ventana.cpp  guiButton.cpp  guiGBox.cpp  guiRButton.cpp  guiSlide.cpp  load3ds.cpp
CandyGraphics/src/: 3ds2Bin.cpp  CMakeLists.txt  cargador-modelos.cpp  demo-candygraphics.cpp  monigote.3ds
CandyGraphics/test/: CMakeLists.txt  prueba-adry.cpp  prueba-consola.cpp  prueba-model.cpp  prueba-render.cpp  prueba-transf.cpp  prueba_compilacion.cpp
CandyMath/: CMakeLists.txt
CandyMath/include/: CandyMath.h  Common.h  Funcion.h  Mat4.h  Matrix.h  Polygon.h  PolygonFactory.h  Problema.h  Rational.h  SimplexHeap.h  SimplexSolver.h  Termino.h  Vector2.h  Vector3.h
CandyMath/lib/: CMakeLists.txt  Common.cpp  Funcion.cpp  Mat4.cpp  Matrix.cpp  Polygon.cpp  PolygonFactory.cpp  Problema.cpp  Rational.cpp  SimplexHeap.cpp  SimplexSolver.cpp  Termino.cpp  Vector2.cpp  Vector3.cpp
CandyMath/test/: CMakeLists.txt  test-funcion.cpp  test-mat4.cpp  test-matrix.cpp  test-mcd.cpp  test-polygon.cpp  test-position.cpp  test-rational.cpp
CandyMusic/: CMakeLists.txt
CandyMusic/include/: MusicEngine.h  MusicResourceManager.h
CandyMusic/lib/: CMakeLists.txt  MusicEngine.cpp  MusicResourceManager.cpp
CandyMusic/src/: CMakeLists.txt  pruebasAisladas.cpp
CandyNapper/: CMakeLists.txt  doxyfile  make.sh
CandyNapper/doc/: conf_example.xml
CandyNapper/include/: Application.h  Attack.h  CandyNapper.h  CompAttack.h  CompGraphic.h  CompGraphicPlayer.h  CompHealth.h  CompIA.h  CompKeyboard.h  CompLogic.h  CompMinimap.h  CompMouse.h  CompMusic.h  CompPhysics.h  CompPlayer.h  Enemy.h  EntityManager.h  GEDynamic.h  GEStatic.h  GameEntity.h  HUD.h  IComponent.h  InterfazGraphics.h  InterfazMusic.h  InterfazPathfinding.h  InterfazPhysics.h  Menu.h  Objetos.h  Obstaculo.h  ParserCandy.h  Player.h  StateChangeLevel.h  StateEscape.h  StateExit.h  StateFollow.h  StateGameOver.h  StateMachineEnemy.h  StateMachineGame.h  StateMenu.h  StatePatrol.h  (+7 more)
CandyNapper/lib/: Application.cpp  Attack.cpp  CMakeLists.txt  CandyNapper.cpp  CompAttack.cpp  CompGraphic.cpp  CompGraphicPlayer.cpp  CompHealth.cpp  CompIA.cpp  CompKeyboard.cpp  CompLogic.cpp  CompMinimap.cpp  CompMouse.cpp  CompMusic.cpp  CompPhysics.cpp  CompPlayer.cpp  Enemy.cpp  EntityManager.cpp  GEDynamic.cpp  GEStatic.cpp  GameEntity.cpp  HUD.cpp  InterfazGraphics.cpp  InterfazMusic.cpp  InterfazPathfinding.cpp  InterfazPhysics.cpp  Menu.cpp  Objetos.cpp  Obstaculo.cpp  ParserCandy.cpp  Player.cpp  StateChangeLevel.cpp  StateEscape.cpp  StateExit.cpp  StateFollow.cpp  StateGameOver.cpp  StateMachineEnemy.cpp  StateMachineGame.cpp  StateMenu.cpp  StatePatrol.cpp  (+7 more)
CandyNapper/resources/: algodon.3ds  botiquing.3ds  botiquinm.3ds  botiquinp.3ds  boyAttack1.3ds  boyAttack10.3ds  boyAttack11.3ds  boyAttack2.3ds  boyAttack3.3ds  boyAttack4.3ds  boyAttack7.3ds  boyAttack8.3ds  boymov1.3ds  boymov10.3ds  boymov11.3ds  boymov12.3ds  boymov2.3ds  boymov3.3ds  boymov4.3ds  boymov5.3ds  boymov6.3ds  boymov7.3ds  boymov8.3ds  boymov9.3ds  chupa.3ds  configuracion.xml  defaultboy.3ds  fleurAttack.3ds  fleurOptonl.3ds  fleurmov1.3ds  fleurmov2.3ds  fleurmov3.3ds  fleurmov4.3ds  fleurmov5.3ds  force_edge.3ds  g_char.3ds  genBin.sh  gengAttack4.3ds  gengAttack5.3ds  gengAttack7.3ds  (+39 more)
CandyNapper/src/: CMakeLists.txt  entregable-hito1.cpp  main.cpp
CandyNapper/test/: CMakeLists.txt  prueba-compilacion.cpp  prueba-entitys.cpp  prueba-graficos.cpp  prueba-inout.cpp  prueba-parser.cpp
MotorIA/: CMakeLists.txt
MotorIA/MaquinaEstados/: CMakeLists.txt  State.cpp  State.h  StateMachine.cpp  StateMachine.h
MotorIA/Pathfinding/: CMakeLists.txt  Makefile
MotorIA/Pathfinding/include/: Grafo.h  IPathfinding.h  Nodo.h  Pathfinding.h
MotorIA/Pathfinding/lib/: CMakeLists.txt  Grafo.cpp  IPathfinding.cpp  Nodo.cpp  Pathfinding.cpp
MotorIA/Pathfinding/src/: CMakeLists.txt  main.cpp  test-adry.cpp
entregables/: CMakeLists.txt  Makefile  cargadorModelos.cpp  defaultboy.3ds  ej1.3ds  ej3.3ds
entregables/CandyOptimization/: CandyOptimization.pro  dataenter.cpp  dataenter.h  dataenter.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  wizard.h  wizard.ui  wizardintro.cpp  wizardintro.h  wizardintro.ui
entregables/EditorDeMapas/: EditorDeMapas.pro  Makefile  Point.cpp  Point.h  candyeditor.cpp  candyeditor.h  candyeditor.ui  enemy.cpp  enemy.h  glwidget.cpp  glwidget.h  main.cpp  obstacle.cpp  obstacle.h  qglwidget.cpp  qglwidget.h  ui_candyeditor.h
extlibs/Box2D/Box2D/Common/: b2Math.h
extlibs/Clipper/: CMakeLists.txt  clipper.cpp  clipper.hpp
extlibs/FTGL/: CMakeLists.txt  FTContour.cpp
extlibs/SFML/src/SFML/: CMakeLists.txt
extlibs/poly2tri/: CMakeLists.txt
extlibs/poly2tri/poly2tri/common/: shapes.cc  shapes.h  utils.h
extlibs/poly2tri/poly2tri/sweep/: cdt.cc  sweep_context.cc
extlibs/tinyXML/: CMakeLists.txt
